feat: add user login with jwt signature
