# routes/index.js
@@ -7,6 +7,7 @@ const swaggerUi = require('swagger-ui-express')
 const swaggerFile = require('../swagger_output.json')
 
 router.post('/register', userController.addUser)
+router.post('/login', userController.login)
 
 router.use('/api-doc', swaggerUi.serve, swaggerUi.setup(swaggerFile))
 
